@@ -137,6 +137,7 @@
 	<script>commands.tile</script>
 	<script>commands.tilecolor</script>
 	<script>commands.tilemove</script>
+	<script>commands.tilepattern</script>
 	<script>commands.travel</script>
 	<script>commands.turnitem</script>
 	<script>commands.where</script>
