@@ -29,6 +29,7 @@ Wolfpack 12.9.14 Beta (SVN)
   - Fixed a bug in the nukez command.
   - Fixed an issue with skillgain in the low levels.
   - Its no longer possible to equip movable>=2 items with doubleclicks.
+  - Added the tilepattern command.
  * Misc. Changes:
  * Known Issues, Bugs, and Missing Features:
   - Some skills are still incomplete.
